--- a/1. Data cleaning.ipynb
+++ b/1. Data cleaning.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "7ef3a82c",
    "metadata": {},
    "outputs": [],
@@ -62,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b75c3ac8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#To-Do: read the dataset \n",
-    "data = "
+    "data = pd.read_csv(\"HepatitisCdata.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "690a3bdc",
    "metadata": {
     "scrolled": true
@@ -113,13 +113,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "04e93e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ALB</th>\n",
+       "      <th>ALP</th>\n",
+       "      <th>ALT</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>BIL</th>\n",
+       "      <th>CHE</th>\n",
+       "      <th>CHOL</th>\n",
+       "      <th>CREA</th>\n",
+       "      <th>GGT</th>\n",
+       "      <th>PROT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0=Blood Donor</td>\n",
+       "      <td>32</td>\n",
+       "      <td>m</td>\n",
+       "      <td>38.5</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>6.93</td>\n",
+       "      <td>3.23</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>69.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0=Blood Donor</td>\n",
+       "      <td>32</td>\n",
+       "      <td>m</td>\n",
+       "      <td>38.5</td>\n",
+       "      <td>70.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>24.7</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>11.17</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>76.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0=Blood Donor</td>\n",
+       "      <td>32</td>\n",
+       "      <td>m</td>\n",
+       "      <td>46.9</td>\n",
+       "      <td>74.7</td>\n",
+       "      <td>36.2</td>\n",
+       "      <td>52.6</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>8.84</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>33.2</td>\n",
+       "      <td>79.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0=Blood Donor</td>\n",
+       "      <td>32</td>\n",
+       "      <td>m</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>7.33</td>\n",
+       "      <td>4.74</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>75.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0=Blood Donor</td>\n",
+       "      <td>32</td>\n",
+       "      <td>m</td>\n",
+       "      <td>39.2</td>\n",
+       "      <td>74.1</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>9.15</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>68.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       Category  Age Sex   ALB   ALP   ALT   AST   BIL    CHE  \\\n",
+       "0           1  0=Blood Donor   32   m  38.5  52.5   7.7  22.1   7.5   6.93   \n",
+       "1           2  0=Blood Donor   32   m  38.5  70.3  18.0  24.7   3.9  11.17   \n",
+       "2           3  0=Blood Donor   32   m  46.9  74.7  36.2  52.6   6.1   8.84   \n",
+       "3           4  0=Blood Donor   32   m  43.2  52.0  30.6  22.6  18.9   7.33   \n",
+       "4           5  0=Blood Donor   32   m  39.2  74.1  32.6  24.8   9.6   9.15   \n",
+       "\n",
+       "   CHOL   CREA   GGT  PROT  \n",
+       "0  3.23  106.0  12.1  69.0  \n",
+       "1  4.80   74.0  15.6  76.5  \n",
+       "2  5.20   86.0  33.2  79.3  \n",
+       "3  4.74   80.0  33.8  75.7  \n",
+       "4  4.32   76.0  29.9  68.7  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#To-Do  Start investigating the data types and correcting that \n",
+    "# Provide explanation about each step in Markdown cells \n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f76f272e",
+   "metadata": {},
+   "source": [
+    "1. Dealing with the 'Category' column : converting the type from object to int \n",
+    "    We notice that the first caracters are different:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c957d24a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0=Blood Donor', '0s=suspect Blood Donor', '1=Hepatitis',\n",
+       "       '2=Fibrosis', '3=Cirrhosis'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " data.Category.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "101a7472",
+   "metadata": {},
+   "source": [
+    "- Replacing each value with the first caracter : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "80fc75ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#To-Do  Start investigating the data types and correcting that \n",
-    "# Provide explanation about each step in Markdown cells \n"
+    "# to not replace both Blood Donor and suspect Blood Donor to the same caracter '0'\n",
+    "data['Category'].replace({'0s=suspect Blood Donor': '4'},inplace=True) \n",
+    "data['Category'] = data['Category'].astype(str).str[0] \n",
+    "# change the type to int \n",
+    "data['Category'] = data['Category'].astype(\"int\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e433343",
+   "metadata": {},
+   "source": [
+    "2. Dealing with the 'Sex' column "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "04dd4e1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replacing 'm' with 1 and 'f' by 0\n",
+    "data['Sex'].replace({'m': 0},inplace=True) \n",
+    "data['Sex'].replace({'f': 1},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71488178",
+   "metadata": {},
+   "source": [
+    "- Cheking the changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d587acd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 615 entries, 0 to 614\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Unnamed: 0  615 non-null    int64  \n",
+      " 1   Category    615 non-null    int32  \n",
+      " 2   Age         615 non-null    int64  \n",
+      " 3   Sex         615 non-null    int64  \n",
+      " 4   ALB         614 non-null    float64\n",
+      " 5   ALP         597 non-null    float64\n",
+      " 6   ALT         614 non-null    float64\n",
+      " 7   AST         615 non-null    float64\n",
+      " 8   BIL         615 non-null    float64\n",
+      " 9   CHE         615 non-null    float64\n",
+      " 10  CHOL        605 non-null    float64\n",
+      " 11  CREA        615 non-null    float64\n",
+      " 12  GGT         615 non-null    float64\n",
+      " 13  PROT        614 non-null    float64\n",
+      "dtypes: float64(10), int32(1), int64(3)\n",
+      "memory usage: 65.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    " data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1047ebb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 4, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Category.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "87b75618",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Sex.unique()"
    ]
   },
   {
@@ -142,7 +452,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "bfdf6d06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ALB', 'ALP', 'ALT', 'CHOL', 'PROT'], dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which columns have missing values?\n",
+    "data.columns[data.isna().any()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "775f0b44",
    "metadata": {},
    "outputs": [],
@@ -151,6 +483,138 @@
     "# Treat each case seperately \n",
     "# Hint : no data row should be deleted \n",
     "# Provide evidence that you filled those missing values after each step "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d488a9f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['ALB'].fillna(data['ALB'].mean(), inplace= True)\n",
+    "data['ALB'].isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "63914184",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['ALP'].fillna(data['ALP'].mean(), inplace= True)\n",
+    "data['ALP'].isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2786438d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['ALT'].fillna(data['ALT'].mean(), inplace= True)\n",
+    "data['ALT'].isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7f26d10a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['CHOL'].fillna(data['CHOL'].mean(), inplace= True)\n",
+    "data['CHOL'].isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "85fc1a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['PROT'].fillna(data['PROT'].mean(), inplace= True)\n",
+    "data['PROT'].isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "de9dbbd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Is there any other missing values left ? \n",
+    "data.isna().sum().sum()"
    ]
   },
   {
@@ -164,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "bd552319",
    "metadata": {},
    "outputs": [
@@ -176,7 +640,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "255cb6a7",
    "metadata": {},
    "outputs": [],
@@ -197,25 +661,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "f63998c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ID', 'Category', 'Age', 'Sex', 'ALB', 'ALP', 'ALT', 'AST', 'BIL',\n",
-       "       'CHE', 'CHOL', 'CREA', 'GGT', 'PROT'],\n",
-       "      dtype='object')"
+       "['ID',\n",
+       " 'Category',\n",
+       " 'Age',\n",
+       " 'Sex',\n",
+       " 'ALB',\n",
+       " 'ALP',\n",
+       " 'ALT',\n",
+       " 'AST',\n",
+       " 'BIL',\n",
+       " 'CHE',\n",
+       " 'CHOL',\n",
+       " 'CREA',\n",
+       " 'GGT',\n",
+       " 'PROT']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns"
+    "data.columns.tolist()"
    ]
   },
   {
@@ -228,18 +703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "5b7d623f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Don't forget to drop the index \n"
+    "# Don't forget to drop the index \n",
+    "data.to_csv('HepatitisCdata.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c9af0b",
+   "id": "db14dbc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -247,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
