--- a/2.  Unsupervised task.ipynb
+++ b/2.  Unsupervised task.ipynb
@@ -56,20 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f4004a85",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset \n",
-    "df = "
+    "df = pd.read_csv(\"HepatitisCdata.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "94320e18",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -214,7 +216,7 @@
        "4  29.9  68.7  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,15 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "47335020",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Age',\n",
-       " 'Sex',\n",
+       "['Sex',\n",
        " 'ALB',\n",
        " 'ALP',\n",
        " 'ALT',\n",
@@ -246,13 +247,15 @@
        " 'PROT']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# To-Do : We will select only the columns to work with = all columns except the id and the Category \n"
+    "# To-Do : We will select only the columns to work with = all columns except the id and the Category \n",
+    "data = df.iloc[: , -11:] # Select last 11 columns of the dataframe\n",
+    "data.columns.tolist()"
    ]
   },
   {
@@ -268,18 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "42acfe5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# To-Do: set the number of clusters to be equal to the number of classes ( categories)\n",
-    "n_clusters = "
+    "n_clusters = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "e8ed9f57",
    "metadata": {},
    "outputs": [],
@@ -290,24 +293,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "99af4de2",
    "metadata": {},
    "outputs": [],
    "source": [
     "#To-Do : fit model and predict clusters\n",
-    "yhat = "
+    "yhat = model.fit_predict(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "f22d0ffc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# To-Do :Add the cluster as a column to the data frame \n",
-    "df['cluster'] = "
+    "df['cluster'] = yhat"
    ]
   },
   {
@@ -320,18 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "47bee1c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To-Do save the file , Do not forget to drop the index \n"
+    "# To-Do save the file , Do not forget to drop the index \n",
+    "# Don't forget to drop the index \n",
+    "df.to_csv('HepatitisCdata.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4748899",
+   "id": "288dad1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
