--- a/3.  Supervised task.ipynb
+++ b/3.  Supervised task.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "id": "34235ce2",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "id": "89b318b7",
    "metadata": {
     "scrolled": false
@@ -208,28 +208,43 @@
        "4  29.9  68.7        3  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# To-Do:  load the data \n",
-    "df = \n",
+    "df = pd.read_csv('HepatitisCdata.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "id": "9d2bdcc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(492, 12) (123, 12) (492,) (123,)\n"
+     ]
+    }
+   ],
    "source": [
     "# To-Do : keep only the columns to be used : all features except ID, cluster \n",
+    "data = df.drop(['ID','cluster'], axis=1)\n",
+    "\n",
     "# The target here is the Category column \n",
+    "x = data.drop(['Category'], axis=1)\n",
+    "y = data['Category']\n",
+    "\n",
     "# Do not forget to split your data (this is a classification task)\n",
-    "# test set size should be 20% of the data "
+    "# test set size should be 20% of the data \n",
+    "x_train , x_test , y_train , y_test = train_test_split(x,y ,test_size=0.2,random_state =42)\n",
+    "print(x_train.shape,x_test.shape,y_train.shape,y_test.shape)"
    ]
   },
   {
@@ -242,36 +257,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2ea837ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "# To-do build the model and train it \n",
     "# note that you will be providing explanation about the hyper parameter tuning \n",
-    "# So you will be iterating a number of times before getting the desired performance \n"
+    "# So you will be iterating a number of times before getting the desired performance \n",
+    "clf = RandomForestClassifier(n_estimators =30, criterion='entropy', random_state=0)\n",
+    "clf = clf.fit(x_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "id": "62097d19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat = "
+    "y_hat = clf.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 6,
    "id": "37b8934a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# To-do : evaluate the model in terms of accuracy and precision \n",
+    "from sklearn.metrics import precision_score, accuracy_score , classification_report, confusion_matrix\n",
+    "\n",
+    "target = ['0', '4', '1', '2', '3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11fa2ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>4</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    0  4  1  2  3\n",
+       "0  96  0  0  0  0\n",
+       "4   4  4  1  0  0\n",
+       "1   3  0  3  0  0\n",
+       "2   4  0  0  5  0\n",
+       "3   3  0  0  0  0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm = confusion_matrix(y_test, y_hat)\n",
+    "pd.DataFrame(cm,index=target,columns=target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3779f93a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      1.00      0.93        96\n",
+      "           4       1.00      0.44      0.62         9\n",
+      "           1       0.75      0.50      0.60         6\n",
+      "           2       1.00      0.56      0.71         9\n",
+      "           3       0.00      0.00      0.00         3\n",
+      "\n",
+      "    accuracy                           0.88       123\n",
+      "   macro avg       0.72      0.50      0.57       123\n",
+      "weighted avg       0.86      0.88      0.85       123\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_hat, target_names= target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "341ccbcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8780487804878049"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Provide evidence that your model is not overfitting \n",
-    "from sklearn.metrics import precision_score, accuracy_score\n"
+    "accuracy_score(y_test,y_hat) "
    ]
   },
   {
@@ -293,7 +472,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
+   "id": "eae46c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       3, 0, 1, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 2, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 1, 0, 2, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "428a1032",
    "metadata": {},
    "outputs": [
@@ -301,23 +506,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/soumia/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\admin\\AppData\\Local\\Temp/ipykernel_14368/1526763928.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+      "  test_df[\"Category\"]= y_test\n"
      ]
     }
    ],
    "source": [
     "# To-Do : create the complete test dataframe : it should contain all the feature column + the actual target and the ID as well  \n",
-    "test_df[\"Category\"] = "
+    "x = df.drop(['Category'], axis=1)\n",
+    "x_train , test_df , y_train , y_test = train_test_split(x,y ,test_size=0.2,random_state =42)\n",
+    "test_df[\"Category\"]= y_test "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 12,
    "id": "8292941c",
    "metadata": {},
    "outputs": [
@@ -470,7 +677,7 @@
        "132  68.0        3         0  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "id": "3d90512a",
    "metadata": {},
    "outputs": [
@@ -489,23 +696,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/soumia/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\admin\\AppData\\Local\\Temp/ipykernel_14368/31459423.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
+      "  test_df[\"Predicted_class\"] = y_hat\n"
      ]
     }
    ],
    "source": [
     "# To-Do : Add the predicted_class column \n",
-    "test_df[\"Predicted_class\"] = "
+    "test_df[\"Predicted_class\"] = y_hat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "id": "1d81bd95",
    "metadata": {},
    "outputs": [
@@ -664,13 +871,53 @@
        "132  68.0        3         0                0  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3bbbe63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 123 entries, 248 to 336\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   ID               123 non-null    int64  \n",
+      " 1   Age              123 non-null    int64  \n",
+      " 2   Sex              123 non-null    int64  \n",
+      " 3   ALB              123 non-null    float64\n",
+      " 4   ALP              123 non-null    float64\n",
+      " 5   ALT              123 non-null    float64\n",
+      " 6   AST              123 non-null    float64\n",
+      " 7   BIL              123 non-null    float64\n",
+      " 8   CHE              123 non-null    float64\n",
+      " 9   CHOL             123 non-null    float64\n",
+      " 10  CREA             123 non-null    float64\n",
+      " 11  GGT              123 non-null    float64\n",
+      " 12  PROT             123 non-null    float64\n",
+      " 13  cluster          123 non-null    int64  \n",
+      " 14  Category         123 non-null    int64  \n",
+      " 15  Predicted_class  123 non-null    int64  \n",
+      "dtypes: float64(10), int64(6)\n",
+      "memory usage: 16.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_df.info()"
    ]
   },
   {
@@ -683,19 +930,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a0f354df",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the test set \n",
-    "test_df.to_csv(\"test_summary.csv\")"
+    "test_df.to_csv(\"test_summary.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf5c7f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -709,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
